--- a/src/main/resources/templates/admin/show.html
+++ b/src/main/resources/templates/admin/show.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Table of users</title>
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="/app.js" defer></script>
     <style>
         html, body {
             height: 100%;
@@ -56,7 +57,7 @@
                                 <h4 class="mb-0">All Users</h4>
                             </div>
                             <div class="border p-3" style="background-color: white">
-                                <table class="table table-striped">
+                                <table class="table table-striped" id = "tableOfUsers">
                                     <thead>
                                     <tr>
                                         <th>ID</th>
@@ -69,28 +70,7 @@
                                         <th>Delete</th>
                                     </tr>
                                     </thead>
-                                    <tbody>
-                                    <tr th:each="user : ${users}">
-                                        <td th:utext="${user.getId()}">id</td>
-                                        <td th:utext="${user.getFirstName()}">first_name</td>
-                                        <td th:utext="${user.getLastName()}">last_name</td>
-                                        <td th:utext="${user.getAge()}">age</td>
-                                        <td th:utext="${user.getEmail()}">email</td>
-                                        <td th:utext="${user.rolesToString()}"></td>
-
-                                        <td>
-                                            <button type="button" class="btn btn-info" data-toggle="modal"
-                                                    th:data-target="'#editModal' + ${user.getId()}">
-                                                Edit
-                                            </button>
-                                        </td>
-                                        <td>
-                                            <button type="button" class="btn btn-danger" data-toggle="modal"
-                                                    th:data-target="'#deleteModal' + ${user.getId()}">
-                                                Delete
-                                            </button>
-                                        </td>
-                                    </tr>
+                                    <tbody id="tbodyOfTable">
                                     </tbody>
                                 </table>
                             </div>
@@ -101,49 +81,43 @@
                             </div>
                             <div class="border p-3" style="background-color: white;">
                                 <div class="d-flex justify-content-center form-group text-center">
-                                    <form th:method="post" th:action="@{/admin/addNewUser}" th:object="${userForForm}"
-                                          style="width: 300px;">
-
+                                    <form style="width: 300px;" id = "myFormToAddUser">
                                         <div class="form-group mb-1">
                                             <label for="firstName" class="font-weight-bold">First name</label>
                                             <input type="text" class="form-control form-control-sm"
-                                                   th:field="*{firstName}"
                                                    id="firstName" required/>
                                         </div>
 
                                         <div class="form-group mb-1">
                                             <label for="lastName" class="font-weight-bold">Last name</label>
                                             <input type="text" class="form-control form-control-sm"
-                                                   th:field="*{lastName}"
                                                    id="lastName" required/>
                                         </div>
 
                                         <div class="form-group mb-1">
                                             <label for="age" class="font-weight-bold">Age</label>
-                                            <input type="number" class="form-control form-control-sm" th:field="*{age}"
-                                                   id="age"
+                                            <input type="number" class="form-control form-control-sm" id="age"
                                                    required/>
                                         </div>
 
                                         <div class="form-group mb-1">
                                             <label for="email" class="font-weight-bold">Email</label>
-                                            <input type="email" class="form-control form-control-sm" th:field="*{email}"
+                                            <input type="email" class="form-control form-control-sm"
                                                    id="email" required/>
                                         </div>
 
                                         <div class="form-group mb-1">
                                             <label for="password" class="font-weight-bold">Password</label>
                                             <input type="password" class="form-control form-control-sm"
-                                                   th:field="*{password}"
                                                    id="password" required/>
                                         </div>
 
                                         <div class="form-group mb-1">
                                             <label for="roleSelect" class="font-weight-bold">Role</label>
-                                            <select id="roleSelect" name="roles" th:field="*{roles}" multiple
-                                                    class="form-control form-control-sm">
-                                                <option th:each="role : ${roles}" th:value="${role.id}"
-                                                        th:text="${role.role}"></option>
+                                            <select id="roleSelect" name="roles" multiple
+                                                    class="form-control form-control-sm" required>
+                                                <option value="1">Admin</option>
+                                                <option value="2">User</option>
                                             </select>
                                         </div>
                                         <br/>
@@ -190,9 +164,11 @@
         </div>
     </div>
 </div>
-<div th:each="user : ${users}">
-    <div class="modal fade" th:id="'editModal' + ${user.getId()}" tabindex="-1" role="dialog"
-         aria-labelledby="editModalLabel" aria-hidden="true">
+
+<!-- Модальное окно для редактирования -->
+<div>
+    <div class="modal fade" tabindex="-1" role="dialog"
+         aria-labelledby="editModalLabel" aria-hidden="true" id="modalEdit">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -202,51 +178,48 @@
                     </button>
                 </div>
                 <div class="modal-body d-flex justify-content-center">
-                    <form th:method="post" th:action="@{/admin/editUser}" style="width: 100%; max-width: 400px;">
+                    <form  style="width: 100%; max-width: 250px;" id = "editForm">
                         <div class="form-group mb-1 text-center">
-                            <label for="id" class="font-weight-bold">ID</label>
-                            <input type="text" class="form-control text-center" disabled name="id"
-                                   th:value="${user.getId()}" id="id"/>
+                            <label for="editId" class="font-weight-bold">ID</label>
+                            <input type="text" class="form-control text-center" disabled name="id" id="editId"/>
                         </div>
-                        <input type="hidden" name="id" th:value="${user.getId()}"/>
                         <div class="form-group mb-1 text-center">
                             <label for="editFirstName" class="font-weight-bold">First name</label>
                             <input type="text" class="form-control text-center" name="firstName"
-                                   th:value="${user.getFirstName()}" id="editFirstName" required/>
+                                   id="editFirstName" required/>
                         </div>
                         <div class="form-group mb-1 text-center">
                             <label for="editLastName" class="font-weight-bold">Last name</label>
                             <input type="text" class="form-control text-center" name="lastName"
-                                   th:value="${user.getLastName()}" id="editLastName" required/>
+                                    id="editLastName" required/>
                         </div>
                         <div class="form-group mb-1 text-center">
                             <label for="editAge" class="font-weight-bold">Age</label>
                             <input type="number" class="form-control text-center" name="age"
-                                   th:value="${user.getAge()}" id="editAge" required/>
+                                    id="editAge" required/>
                         </div>
                         <div class="form-group mb-1 text-center">
                             <label for="editEmail" class="font-weight-bold">Email</label>
                             <input type="email" class="form-control text-center" name="email"
-                                   th:value="${user.getEmail()}" id="editEmail" required/>
+                                    id="editEmail" required/>
                         </div>
                         <div class="form-group mb-1 text-center">
                             <label for="editPassword" class="font-weight-bold">Password</label>
                             <input type="text" class="form-control text-center" name="newPassword"
                                    id="editPassword"/>
                         </div>
-                        <input type="hidden" name="password" th:value="${user.getPassword()}"/>
+                        <input type="hidden" name="password" />
                         <div class="form-group mb-1 text-center">
-                            <label for="editRoleSelect" class="font-weight-bold">Role</label>
+                            <label for="editRoleSelect" class="font-weight-bold"
+                                   style="display: block; margin-top: 10px;">Role</label>
                             <select id="editRoleSelect" name="roles" multiple>
-                                <option th:each="role : ${roles}"
-                                        th:value="${role.id}"
-                                        th:text="${role.role}">
-                                </option>
+                                <option id = '1'>Admin</option>
+                                <option id = '2'>User</option>
                             </select>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary">Edit</button>
+                            <button type="submit" class="btn btn-primary" id = 'editButton'>Edit</button>
                         </div>
                     </form>
                 </div>
@@ -254,9 +227,11 @@
         </div>
     </div>
 </div>
-<div th:each="user : ${users}">
-    <div class="modal fade" th:id="'deleteModal' + ${user.getId()}" tabindex="-1" role="dialog"
-         aria-labelledby="deleteModalLabel" aria-hidden="true">
+
+<!-- Можальное окно для удаления  -->
+<div>
+    <div class="modal fade" tabindex="-1" role="dialog"
+         aria-labelledby="deleteModalLabel" aria-hidden="true" id="modalDelete">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -266,52 +241,46 @@
                     </button>
                 </div>
                 <div class="modal-body modal-body d-flex justify-content-center">
-                    <form style="width: 100%; max-width: 250px;">
+                    <form style="width: 100%; max-width: 250px">
                         <div class="form-group mb-1 text-center">
-                            <label for="id1" class="font-weight-bold">ID</label>
+                            <label for="deleteId" class="font-weight-bold">ID</label>
                             <input type="text" class="form-control text-center" name="firstName"
-                                   th:value="${user.getId()}" id="id1" required disabled/>
+                                   id="deleteId" required disabled/>
                         </div>
                         <div class="form-group mb-1 text-center">
-                            <label for="editFirstName1" class="font-weight-bold">First name</label>
+                            <label for="deleteFirstName" class="font-weight-bold">First name</label>
                             <input type="text" class="form-control text-center" name="firstName"
-                                   th:value="${user.getFirstName()}" id="editFirstName1" required disabled/>
+                                   id="deleteFirstName" required disabled/>
                         </div>
                         <div class="form-group mb-1 text-center">
-                            <label for="editLastName1" class="font-weight-bold">Last name</label>
+                            <label for="deleteLastName" class="font-weight-bold">Last name</label>
                             <input type="text" class="form-control text-center" name="lastName"
-                                   th:value="${user.getLastName()}" id="editLastName1" required disabled/>
+                                   id="deleteLastName" required disabled/>
                         </div>
                         <div class="form-group mb-1 text-center">
-                            <label for="editAge1" class="font-weight-bold">Age</label>
+                            <label for="deleteAge" class="font-weight-bold">Age</label>
                             <input type="number" class="form-control text-center" name="age"
-                                   th:value="${user.getAge()}" id="editAge1" required disabled/>
+                                   id="deleteAge" required disabled/>
                         </div>
                         <div class="form-group mb-1 text-center">
-                            <label for="editEmail1" class="font-weight-bold">Email</label>
+                            <label for="deleteEmail" class="font-weight-bold">Email</label>
                             <input type="email" class="form-control text-center" name="email"
-                                   th:value="${user.getEmail()}" id="editEmail1" required disabled/>
+                                   id="deleteEmail" required disabled/>
                         </div>
                         <div class="form-group mb-1 text-center">
                             <div style="margin-bottom: 10px; text-align: center;">
-                                <label for="editRoleSelect1" class="font-weight-bold"
+                                <label for="deleteRoles" class="font-weight-bold"
                                        style="display: block; margin-top: 10px;">Role</label>
-                                <select id="editRoleSelect1" name="roles" disabled multiple
-                                        style="background-color: #e9edf0">
-                                    <option th:each="role : ${user.getRoles()}"
-                                            th:value="${role.id}"
-                                            th:text="${role.role}">
-                                    </option>
+                                <select id="deleteRoles" name="roles" disabled multiple style="background-color: #e9edf0">
                                 </select>
                             </div>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <form th:method="post" th:action="@{/admin/deleteUser}">
-                        <input type="hidden" name="id" th:value="${user.getId()}"/>
+                    <form>
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <button type="submit" class="btn btn-danger" id="deleteButton">Delete</button>
                     </form>
                 </div>
             </div>
