теперь crud работает, так же удалил RoleService и RoleServiceImpl + поменял AdminRestController

--- a/src/main/resources/templates/admin/show.html
+++ b/src/main/resources/templates/admin/show.html
@@ -206,7 +206,7 @@
                         <div class="form-group mb-1 text-center">
                             <label for="editPassword" class="font-weight-bold">Password</label>
                             <input type="text" class="form-control text-center" name="newPassword"
-                                   id="editPassword"/>
+                                   id="editPassword" required/>
                         </div>
                         <input type="hidden" name="password" />
                         <div class="form-group mb-1 text-center">
