добавил id к userTable и на объекте tab вызвал show, теперь переключается при создании пользователя

--- a/src/main/resources/templates/admin/show.html
+++ b/src/main/resources/templates/admin/show.html
@@ -48,7 +48,7 @@
                     <br/>
                     <h1>Admin panel</h1>
                     <nav class="nav nav-tabs">
-                        <a class="nav-link" data-toggle="tab" href="#UserTable">Users table</a>
+                        <a class="nav-link" data-toggle="tab" id="userTableTab" href="#UserTable">Users table</a>
                         <a class="nav-link" data-toggle="tab" href="#NewUser">New User</a>
                     </nav>
                     <div class="tab-content">
